--- a/blocks/sarif-file-block/index.css
+++ b/blocks/sarif-file-block/index.css
@@ -1,3 +1,12 @@
 pre {
   background: papayawhip;
 }
+
+.message {
+  background: papayawhip;
+}
+
+.code-snippet {
+  background: ghostwhite;
+  width: fit-content;
+}
